# substack_archiver

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  colors.py  config-example.json  config.env  config.json  main.py  pyproject.toml  requirements.txt  save_session.py  substack_archiver.py
app/: config.py  models.py  utils.py
app/api/: cli.py
app/repositories/: file_repository.py  substack_repository.py
app/services/: agno_service.py  archiver_service.py  rag_service.py
scripts/: rag.py  save_session.py
src/: config.py  handler.py  models.py  utils.py
tests/: test_archiver.py  test_config.py  test_utils.py
