[project]
name = "substack-archiver"
version = "0.1.0"
requires-python = ">=3.12.7"
dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==2.0.12",
    "greenlet>=3.1.1",
    "idna==3.7",
    "playwright>=1.47.0",
    "pyee>=12",
    "pyfiglet==0.8.post1",
    "python-dotenv==1.0.0",
    "requests==2.27.1",
    "setuptools==72.1.0",
    "six>=1.17.0",
    "termcolor==1.1.0",
    "typing-extensions==4.12.2",
    "urllib3==1.26.19",
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "aiohttp>=3.12.14",
    "aiofiles>=24.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "types-six>=1.17.0",
    "types-tqdm>=4.67.0.20250516",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "pre-commit>=3.7.1",
    "pyrefly>=0.25.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
format.preview = true
format.docstring-code-format = true
lint.preview = true

[tool.pytest.ini_options]
pythonpath = ["."]
